# Locaza

./: Jenkinsfile
backend/: .env  .env.docker  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/v1/endpoints/: __init__.py  auth.py  categories.py  chats.py  favorites.py  notifications.py  products.py  search_history.py  transactions.py  upload.py  users.py  wishlist.py  wishlist_items.py
backend/app/core/: config.py  middleware.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: models.py
backend/app/repositories/: auth_repository.py  category_repository.py  chat_repository.py  favorite_repository.py  notification_repository.py  product_repository.py  search_history_repository.py  transaction_repository.py  user_repository.py  wishlist_item_repository.py  wishlist_repository.py
backend/app/schemas/: auth_schema.py  category_schema.py  chat_schema.py  favorite_schema.py  notification_schema.py  product_schema.py  search_history_schema.py  transaction_schema.py  user_schema.py  wishlist_item_schema.py  wishlist_schema.py
backend/app/services/: auth_service.py  category_service.py  chat_service.py  favorite_service.py  notification_service.py  product_service.py  search_history_service.py  transaction_service.py  upload_service.py  user_service.py  wishlist_item_service.py  wishlist_service.py
backend/scripts/: run-backend.bat
frontend/: .gitignore  README.md  pubspec.yaml
frontend/android/: settings.gradle.kts
frontend/lib/: main.dart
(+85 files in other folders)
