[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    { name = "ซารีฟ มะสาแม็ง", email = "sareef.masamaeng@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "sqlalchemy (>=2.0.0,<3.0.0)",
    "psycopg2-binary (>=2.9,<3.0)",
    "alembic (>=1.13,<2.0)",
    "pydantic-settings (>=2.6.0,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "email-validator (>=2.3.0,<3.0.0)",
    "bcrypt (<4.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
httpx = "^0.28.1"

[tool.poetry]
package-mode = false
